--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:               Celeste
-url:                 https://nicoelayda.github.io
+url:                 https://DonsetPG.github.io
 baseurl:             ""
 
 markdown:            kramdown
