fix: wrong handle

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:               Celeste
+title:               Paul Garnier
 url:                 https://DonsetPG.github.io
 baseurl:             ""
 
